--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "lodash.uniqueid": "^4.0.1",
     "vue": "^2.6.10",
     "vuedraggable": "^2.23.2"
   },
