--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint-css": "./node_modules/.bin/stylelint './src/**/*.vue'"
   },
   "dependencies": {
     "core-js": "^3.4.3",
@@ -21,6 +22,9 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "stylelint": "^12.0.1",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-processor-html": "^1.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
