--- a/kanban-vue-ssr/package.json
+++ b/kanban-vue-ssr/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "vue": "^2.6.11",
-    "vue-server-renderer": "^2.6.11"
+    "vue-router": "^3.1.4",
+    "vue-server-renderer": "^2.6.11",
+    "vuex": "^3.1.2",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {},
   "scripts": {
