--- a/kanban-vue-ssr/package.json
+++ b/kanban-vue-ssr/package.json
@@ -9,7 +9,9 @@
     "vue-router": "^3.1.4",
     "vue-server-renderer": "^2.6.11",
     "vuex": "^3.1.2",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {},
   "scripts": {
