--- a/kanban-vue-ssr/package.json
+++ b/kanban-vue-ssr/package.json
@@ -10,10 +10,14 @@
     "vue-server-renderer": "^2.6.11",
     "vuex": "^3.1.2",
     "vuex-router-sync": "^5.0.0",
+    "webpack": "^4.41.5",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "esm": "^3.2.25",
+    "nodemon": "^2.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
